# meshx

./: .gitignore  Cargo.toml  Makefile  README.md  aabb.go  collision.go  errors.go  go.mod  mesh.go  ray.go  ray_test.go  sphere.go  triangle.go  triangle_test.go  vector.go  wavefront.go  wavefront_test.go
.github/workflows/: ci.yml
benches/: collision.rs
exchange/: wavefront.go  wavefront_test.go
halfedge/: face.go  half_edge.go  mesh.go  mesh_test.go  patch.go  vertex.go
spatial/: octree.go  octree_test.go
src/: geometry.rs  lib.rs  mesh.rs  spatial.rs
src/geometry/: aabb.rs  collision.rs  line.rs  plane.rs  polygon.rs  ray.rs  sphere.rs  triangle.rs  vector3.rs
src/geometry/collision/: aabb_aabb.rs  aabb_ray.rs  aabb_sphere.rs  aabb_triangle.rs  aabb_vector3.rs  line_plane.rs  plane_vector3.rs  ray_sphere.rs  ray_triangle.rs  sphere_sphere.rs  sphere_triangle.rs  sphere_vector3.rs  triangle_triangle.rs  triangle_vector3.rs
src/mesh/: cartesian.rs  common.rs  half_edge.rs  helpers.rs  surface.rs  utils.rs  wavefront.rs
src/spatial/: octree.rs
