[package]
name = "meshx"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
flate2 = { version = "1", features = ["zlib"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "collision"
harness = false

[profile.dev]
opt-level = 3
