[package]
name = "meshx"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1", features = ["zlib"] }
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.10"
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "collision"
harness = false

[profile.dev]
opt-level = 3
